Fixed Overflow-X

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,7 +25,7 @@
 }
 
 html {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
